// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup component matches snapshot (default props) 1`] = `
<button
<<<<<<< HEAD
  className="fdsIconButton rounded--all border--focus--noTransition transition--default fdsIconButton--ghost fdsIconButton--m"
=======
  className="fdsIconButton rounded--all border--focus--noTransition transition-default fdsIconButton--ghost fdsIconButton--m"
  role="img"
>>>>>>> @{-1}
>
  <span
    className=""
  >
    <Icon
      customSize={18}
    />
  </span>
</button>
`;

exports[`ButtonGroup component matches snapshot (set all props) 1`] = `
<button
  className="fdsIconButton rounded--all border--focus--noTransition transition--default fdsIconButton--aqua fdsIconButton--s fdsIconButton--disabled fdsIconButton--active fdsIconButton--circle fdsIconButton--isDestructive fdsIconButton--loading"
  disabled={true}
  role="img"
>
  <span
    className="fdsIconButton--hidden"
  >
    <Icon
      customSize={16}
    />
  </span>
</button>
`;
